# oftc-tools

./: OFTC-MIB.txt  OIDs  PALFRADER-MIB.txt
github/: backup.py
infrastructure/country-grapher/: geo-ip-stats  get-irc-data  massresolver.rb
infrastructure/country-grapher/dns-data/: Makefile  geo-map  iso2region.pl
infrastructure/geodns/: README  check-geodns  geobot  geodns-example.yaml
infrastructure/mailman/: check_mailman_moderation
infrastructure/misc/: create-ircservices-backup  xlogsync  xlogsync-init.d
infrastructure/munin/: README  irc  irc_  ircmemory  memory_graph_services  oftc_node_  postgres-WAL-traffic
infrastructure/munin/plugin-conf.d/: ircmemory
infrastructure/nagios/: README  build-nagios-ircds  check-firewall  check-systemd  check_conntrack  check_debian_version  check_dpkg_dirty  check_irc_ss  dsa-check-raid-sw  dsa-check-running-kernel  icinga-is-alive  localmail  nagios-check-apt-updates  nagios-check-libs  nagios-check-mount-ro  nagios-check-running-kernel  nagios-check-tcp-ircsserver  nagios-get-links  nagios-irker  nagios-oftc-check-irc  nagios-recheck_critical_services  oftc-checkcommands.cfg  shedding-check.rb  shedding-grapher.rb  shedding-nagios.yaml  shedding-server.rb  statusbot.py
infrastructure/noc-cgi/: oftc-overview
infrastructure/puppet/: check_puppet
infrastructure/smokeping/: build-smoke.rb  smoke.default
infrastructure/snotes-logger/: snotes-logger
infrastructure/ssh/: gen-knownhosts
infrastructure/ssh/keys/: andromeda.oftc.net  blackhole.oftc.net  cation.oftc.net  chiral.oftc.net  fusion.oftc.net  helium.oftc.net  osmosis.oftc.net  pluto.oftc.net  strange.oftc.net  synthesis.oftc.net
logo/: README  oftc.odg  oftc.txt
oftcdns/: AUTHORS  INSTALL  Makefile  Makefile.am  README  TODO  acinclude.m4  aggregate  autogen.sh  check  cidraggr  cidrsort  configure.ac  convert  exceptions  gajoin  gasplit  init  mkcidrs  oftcdns  oftcdns.in  oftcdns.tac  range2cidr  validate
oftcdns/cron.d/: Makefile.am  oftcdns.in
oftcdns/etc/: Makefile.am
oftcdns/init.d/: Makefile.am  oftcdns.in  statbot.in
oftcdns/oftcdns/: Makefile.am  OFTC.MIB  OFTCDNS-MIB.txt  OFTCDNS.MIB  PALFRADER.MIB  STATBOT-MIB.txt  STATBOT.MIB  convert  exceptions_v4  geo.example.com  geo.oftc.net  oftcdns  oftcdns-example.yaml.in  oftcdns-schema.yaml  oftcdns.mak.in  oftcdns.tac  oftcdns.yaml  oftcdns.yaml.in  queries  results  schema.yaml  statbot  statbot-example.yaml  statbot-schema.yaml  statbot.tac
oftcdns/src/: Makefile.am  convert
oftcdns/var/: Makefile.am  oftcdns.mak  oftcdns.mak.in
oper/: akill  akilluser.pl  challenge.pl  chankick.pl  list-servers  oftc-server-notices.pl  perl_challenge.pl  rotation  zshrc
ruby/: client.rb  record.rb  replay.rb
ruby/net/: IRC.rb
user/irssi/: nickident.pl
voting/: gpgwrapper  oftc-validate-vote  userdir_gpg.py  vote.txt
