# Copyright (C) 2006 Luca Filipozzi
# vim: set fdm=marker ts=2 sw=2 et:

AC_PREREQ(2.59)
AC_INIT([oftcdns],[0.1])
AM_INIT_AUTOMAKE([oftcdns],[0.1])

AC_DEFINE_DIR([PKGLIBDIR],[pkglibdir],[Set to pkglibdir.])
AC_DEFINE_DIR([LOCALSTATEDIR],[localstatedir],[Set to localstatedir.])
AC_DEFINE_DIR([SYSCONFDIR],[sysconfdir],[Set to sysconfdir.])
AC_CONFIG_FILES([Makefile init.d/Makefile init.d/oftcdns cron.d/Makefile cron.d/oftcdns var/Makefile var/oftcdns.mak.in])
AC_OUTPUT
