# Copyright (C) 2007 Luca Filipozzi
MAINTAINERCLEANFILES=aclocal.m4 config.guess config.log config.status configure install-sh missing mkinstalldirs Makefile.in
vardir=${localstatedir}/lib/${PACKAGE}
var_DATA=oftcdns.mak

clean-local:
	$(MAKE) -f oftcdns.mak clean

maintainer-clean-local:
	$(MAKE) -f oftcdns.mak maintainer-clean

